fix: adjust padding and margins on smaller devices

--- a/apps/next/src/styles/globals.css
+++ b/apps/next/src/styles/globals.css
@@ -91,6 +91,14 @@
     background-size: 10%;
   }
 
+  input,
+  textarea,
+  button,
+  select,
+  a {
+    -webkit-tap-highlight-color: transparent;
+  }
+
   /* width */
   ::-webkit-scrollbar {
     @apply h-1 w-1;
